# fem-shell

./: CMakeLists.txt
source/: CMakeLists.txt  fem-shell.cpp  fem-shell.h
src/: CMakeLists.txt  fem-shell.cpp  fem-shell.h  run_examples.sh
tests/: CMakeLists.txt  shell_test.cpp  test_A_uv_t.cpp  test_B_uv_q.cpp  test_C_w_tA16.cpp  test_D_w_q_uni16.cpp  test_E_uvw_t.cpp  test_F_032_ss_uni.cpp
